5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_1806.log
== TEST (2019-04-01 16:01:10) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-(fatorial(365))*1/(fatorial(365-n)*365**n)
	  print (n)
-- ERROR:
File "XXXX", line 4
    print (n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:01:20) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-(fatorial(365))*1/(fatorial(365-n)*365**n)
	  print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:01:27) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-(fatorial(365))*1/(fatorial(365-n)*365**n)
print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:01:32) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-(fatorial(365))*1/(fatorial(365-n)*365**n)
print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:01:46) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-(factorial(365))*1/(factorial(365-n)*365**n)
print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:02:55) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= 1-((factorial(365))*1/(factorial(365-n)*365**n)
print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:03:20) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-((factorial(365))*1/(factorial(365-n)*365**n)
print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:05:02) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-((factorial(365))*1/(factorial(365-n)*365**n)
p=factorial(4)
print (p)
-- ERROR:
File "XXXX", line 4
    p=factorial(4)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:07:16) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-((factorial(365))*1/(factorial(365-n)*365**n)
print (pn)
-- ERROR:
File "XXXX", line 4
    print (pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:07:23) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-((factorial(365))*1/(factorial(365-n)*365**n)

-- ERROR:
File "XXXX", line 4
    
                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:07:39) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no seu grupo? "))
pn= (1-((factorial(365))*1/(factorial(365-n)*365**n)
print (n)
-- ERROR:
File "XXXX", line 4
    print (n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:28:53) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= 1-((factorial(365))/(factorial(365-n))) * (1/365**n)
-- ERROR:
File "XXXX", line 4
    print (n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:29:44) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= 1-((factorial(365))/(factorial(365-n))) * (1/365**n)
print(round(n,2))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:30:15) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= 1-((factorial(365))/(factorial(365-n))) * (1/365**n)
print(round(pn,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:30:50) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= 1-((factorial(365))/(factorial(365-n))) * (1/365**n)
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:30:58) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= 1-((factorial(365))/(factorial(365-n))) * (1/365**n)
print(round(pn,2)*100)
-- EXECUTION TIME:
0.136464
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
17.0
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
54.0
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:32:19) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-((factorial(365))/(factorial(365-n))) * (1/(365**n)))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:33:31) 
-- CODE:
from math import*
n= float(input("quantas pessoas ha no grupo? "))
pn= (1-((factorial(365))/(factorial(365-n))) * (1/(365**n)))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:34:50) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365))/(factorial(365-n)) * (1/(365**n)))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:35:21) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-factorial(365)/factorial(365-n) * (1/(365**n)))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:36:00) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-factorial(365)/factorial(365-n) * 1/(365**n)
print(round(pn,2)*100)
-- ERROR:
File "XXXX", line 4
    print(round(pn,2)*100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:36:15) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-factorial(365)/factorial(365-n) * 1/(365**n))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:36:21) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-factorial(365)/factorial(365-n) * 1/(365**n)
print(round(pn,2)*100)
-- ERROR:
File "XXXX", line 4
    print(round(pn,2)*100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:38:42) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365)/factorial(365-n))*1/(365**n))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:38:57) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365)/factorial(365-n))*1/(365**n))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:39:02) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365)/factorial(365-n))*1/(365**n))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:39:07) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365)/factorial(365-n))*1/(365**n))
print(round(pn,2)*100)
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:40:33) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365)/factorial(365-n))*1/(365**n))
print(round(pn*100,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:40:37) 
-- CODE:
from math import*
n= int(input("quantas pessoas ha no grupo? "))
pn= (1-(factorial(365)/factorial(365-n))*1/(365**n))
print(round(pn*100,2))
-- EXECUTION TIME:
0.205982
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
